[project]
name = "microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "sqo1x",email = "ninjaproxor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.2,<0.121.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
